# claw-librarian

./: .gitignore  LICENSE  PATCHNOTES.md  README.md  pyproject.toml
claw_librarian/: __init__.py  config.py
claw_librarian/adapters/openclaw/: adapter.py  defaults.toml
claw_librarian/cli/: main.py
claw_librarian/graph/: backlinks.py  frontmatter.py  wikilinks.py
claw_librarian/index/: archiver.py  context_builder.py  indexer.py  map_builder.py
claw_librarian/journal/: _ulid.py  reader.py  rotation.py  schema.py  writer.py
claw_librarian/query/: engine.py  expander.py
docs/superpowers/plans/: 2026-03-15-claw-librarian.md
lib/: __init__.py  frontmatter.py  telegram.py  wikilinks.py
scripts/: audit_vault.py  extract_claude_sessions.py  librarian_pipeline.sh  memory_compactor.py  process_inbox.py  session_reset.py  sync_cc_memory.py  validate_canvas.py
tests/: conftest.py  test_adapter.py  test_archiver.py  test_cli.py  test_config.py  test_graph.py  test_index.py  test_integration.py  test_journal.py  test_query.py
