[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claw-librarian"
version = "0.1.0"
description = "File-native memory coordination for multi-agent teams"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Matthew"},
    {name = "Kingpin", email = "kingpin@openclaw.ai"},
]

[project.scripts]
claw = "claw_librarian.cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
